--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
+* {
+	padding: 0;
+	margin: 0;
+}
+
 #home-page {
+	padding: 0;
+	margin: 0;
 	height: 100vh;
 	background: #25274d;
 	color: #fff;
 	text-shadow: 2px 2px 1px #000;
 }
+
