add nav bar and about styling

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,1 +1,5 @@
-$darkblue: #25274d !default;
+$navyblue: #25274d !default;
+$lightnavy: #464866 !default;
+$offwhite: #aaabb8 !default;
+$lightblue: #2e9cca !default;
+$blue: #29648a !default;
