--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,40 @@
+.navbar {
+  overflow: hidden;
+  width: 100%;
+  z-index: 99; }
+  .navbar .content {
+    margin: 0 auto;
+    width: 70%;
+    height: 48px;
+    background-color: #2e9cca; }
+    .navbar .content a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px; }
+      .navbar .content a:hover {
+        background-color: #464866; }
+      .navbar .content a.active {
+        background-color: #25274d;
+        color: white; }
+
+.sticky {
+  position: fixed;
+  top: 0; }
+
+.sticky + #about {
+  padding-top: 48px; }
+
 * {
   padding: 0;
   margin: 0; }
+
+body {
+  background: #aaabb8;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
 #home {
   height: 100vh;
@@ -10,5 +44,55 @@
     text-align: center;
     color: #fff;
     text-shadow: 2px 2px 1px #000; }
+
+#about {
+  width: 70%;
+  height: 130vh;
+  margin: 0 auto;
+  padding-top: 20px;
+  background: #e2e2e6; }
+  #about .container .text {
+    flex-grow: 1;
+    flex-basis: 0; }
+    #about .container .text h2 {
+      font-size: 4em;
+      text-align: center;
+      padding-right: 30px;
+      color: #25274d; }
+    #about .container .text hr {
+      margin-right: 30px;
+      border: 0;
+      height: 2px;
+      background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #25274d, rgba(0, 0, 0, 0)); }
+    #about .container .text h4 {
+      margin: 6px 0;
+      font-size: 1.2em;
+      text-align: center;
+      color: #25274d;
+      margin-right: 30px; }
+    #about .container .text p {
+      margin-top: 6px;
+      text-indent: 1.5em;
+      font-size: 1.2em;
+      margin-right: 30px;
+      color: #25284e; }
+  #about .container .image {
+    flex-grow: 1.3;
+    flex-basis: 0;
+    padding-top: 30px; }
+    #about .container .image img {
+      max-width: 100%;
+      border: 2px solid #ccc;
+      border-radius: 6px;
+      padding: 6px;
+      transform: rotate(0.5deg);
+      -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+      -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+      box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3); }
+
+.container {
+  margin: 0 8%;
+  display: -webkit-flex;
+  display: flex; }
 
 /*# sourceMappingURL=styles.css.map */
