--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,17 +1,85 @@
 @import '_variables';
+@import '_navbar';
 
 * {
 	padding: 0;
 	margin: 0;
 }
 
+body {
+	background: $offwhite;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
+}
+
 #home {
 	height: 100vh;
-	background: $darkblue;
+	background: $navyblue;
 	.home-text-box {
 		padding-top: 34vh;
 		text-align: center;
 		color: #fff;
 		text-shadow: 2px 2px 1px #000;
 	}
+}
+
+#about {
+	width: 70%;
+	height: 130vh;
+	margin: 0 auto;
+	padding-top: 20px;
+	background: lighten($offwhite, 20%);
+	.container {
+		.text {
+			flex-grow: 1;
+			flex-basis: 0;
+			h2 {
+				font-size: 4em;
+				text-align: center;
+				padding-right: 30px;
+				color: $navyblue;
+			}
+			hr {
+				margin-right: 30px;
+				border: 0;
+				height: 2px;
+				background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $navyblue, rgba(0, 0, 0, 0));
+			}
+			h4 {
+				margin: 6px 0;
+				font-size: 1.2em;
+				text-align: center;
+				color: lighten($navyblue, 0.1);
+				margin-right: 30px;
+			}
+			p {
+				margin-top: 6px;
+				text-indent: 1.5em;
+				font-size: 1.2em;
+				margin-right: 30px;
+				color: lighten($navyblue, 0.3);
+			}
+		}
+		.image {
+			flex-grow: 1.3;
+			flex-basis: 0;
+			padding-top: 30px;
+			img {
+				max-width: 100%;
+				border: 2px solid #ccc;
+				border-radius: 6px;
+				padding: 6px;
+				transform: rotate(0.5deg);
+				-moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+				-webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+				box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+			}
+		}
+	}
+}
+
+.container {
+	margin: 0 8%;
+	display: -webkit-flex;
+	display: flex;
 }
