add project grid and anchor link class

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,3 +3,4 @@ $lightnavy: #464866 !default;
 $offwhite: #aaabb8 !default;
 $lightblue: #2e9cca !default;
 $blue: #29648a !default;
+$navheight: 48px !default;
