--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
   position: fixed;
   top: 0; }
 
-.sticky + #about {
+.sticky + #about-anchor {
   padding-top: 48px; }
 
 * {
@@ -36,63 +36,131 @@ body {
   background: #aaabb8;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 
+.anchor {
+  display: block;
+  height: 48px;
+  margin-top: -48px;
+  visibility: hidden; }
+
 #home {
   height: 100vh;
   background: #25274d; }
   #home .home-text-box {
     padding-top: 34vh;
+    font-size: 1.5em;
     text-align: center;
     color: #fff;
     text-shadow: 2px 2px 1px #000; }
+    #home .home-text-box span {
+      color: #2e9cca; }
+    #home .home-text-box a {
+      color: #fff;
+      text-decoration: none; }
+    #home .home-text-box button {
+      margin-top: 15px;
+      background-color: transparent;
+      width: 150px;
+      height: 40px;
+      color: #fff;
+      text-decoration: none;
+      border-color: #fff;
+      border-radius: 2px;
+      font-size: 0.8em; }
+      #home .home-text-box button.loaded {
+        -o-transition: 0.5s;
+        -ms-transition: 0.5s;
+        -moz-transition: 0.5s;
+        -webkit-transition: 0.5s;
+        transition: 0.5s; }
+      #home .home-text-box button:hover {
+        background-color: #464866; }
+      #home .home-text-box button:focus {
+        outline: none;
+        border-color: #fff; }
+      #home .home-text-box button:active {
+        outline: none;
+        border-color: #fff; }
+      #home .home-text-box button:visited {
+        color: #fff;
+        text-decoration: none; }
 
 #about {
   width: 70%;
-  height: 130vh;
   margin: 0 auto;
-  padding-top: 20px;
   background: #e2e2e6; }
-  #about .container .text {
-    flex-grow: 1;
-    flex-basis: 0; }
-    #about .container .text h2 {
-      font-size: 4em;
-      text-align: center;
-      padding-right: 30px;
-      color: #25274d; }
-    #about .container .text hr {
-      margin-right: 30px;
-      border: 0;
-      height: 2px;
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #25274d, rgba(0, 0, 0, 0)); }
-    #about .container .text h4 {
-      margin: 6px 0;
-      font-size: 1.2em;
-      text-align: center;
-      color: #25274d;
-      margin-right: 30px; }
-    #about .container .text p {
-      margin-top: 6px;
-      text-indent: 1.5em;
-      font-size: 1.2em;
-      margin-right: 30px;
-      color: #25284e; }
-  #about .container .image {
-    flex-grow: 1.3;
-    flex-basis: 0;
-    padding-top: 30px; }
-    #about .container .image img {
-      max-width: 100%;
-      border: 2px solid #ccc;
-      border-radius: 6px;
-      padding: 6px;
-      transform: rotate(0.5deg);
-      -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
-      -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
-      box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3); }
+  #about .container {
+    padding: 20px 0px;
+    display: -webkit-flex;
+    display: flex; }
+    #about .container .text {
+      flex-grow: 1;
+      flex-basis: 0; }
+      #about .container .text h2 {
+        font-size: 4em;
+        text-align: center;
+        padding-right: 30px;
+        color: #25274d; }
+      #about .container .text hr {
+        margin-right: 30px;
+        border: 0;
+        height: 2px;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #25274d, rgba(0, 0, 0, 0)); }
+      #about .container .text h4 {
+        margin: 6px 0;
+        font-size: 1.2em;
+        text-align: center;
+        color: #25274d;
+        margin-right: 30px; }
+      #about .container .text p {
+        margin-top: 6px;
+        text-indent: 1.5em;
+        font-size: 1.2em;
+        margin-right: 30px;
+        color: #25284e; }
+    #about .container .image {
+      flex-grow: 1.3;
+      flex-basis: 0;
+      padding-top: 30px; }
+      #about .container .image img {
+        max-width: 100%;
+        border: 2px solid #ccc;
+        border-radius: 6px;
+        padding: 6px;
+        transform: rotate(0.5deg);
+        -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+        -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+        box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3); }
+
+#projects {
+  background-color: #d9dadf;
+  height: 130vh;
+  width: 70%;
+  margin: 0 auto;
+  padding-top: 20px; }
+  #projects h2 {
+    font-size: 4em;
+    text-align: center;
+    color: #25274d; }
+  #projects hr {
+    margin: 15px 20px;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #25274d, rgba(0, 0, 0, 0)); }
+  #projects .project-grid {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 0 -10px; }
+    #projects .project-grid .project {
+      height: 300px;
+      margin: 10px;
+      flex: 40%;
+      background-color: #e2e2e6;
+      border: 2px solid #c6c6cf;
+      border-radius: 5%; }
 
 .container {
-  margin: 0 8%;
-  display: -webkit-flex;
-  display: flex; }
+  margin: 0 8%; }
 
 /*# sourceMappingURL=styles.css.map */
