--- a/css/styles.css
+++ b/css/styles.css
@@ -1,166 +1,376 @@
-.navbar {
-  overflow: hidden;
-  width: 100%;
-  z-index: 99; }
-  .navbar .content {
-    margin: 0 auto;
-    width: 70%;
-    height: 48px;
-    background-color: #2e9cca; }
-    .navbar .content a {
-      float: left;
-      display: block;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px; }
-      .navbar .content a:hover {
-        background-color: #464866; }
-      .navbar .content a.active {
-        background-color: #25274d;
-        color: white; }
-
-.sticky {
-  position: fixed;
-  top: 0; }
-
-.sticky + #about-anchor {
-  padding-top: 48px; }
-
-* {
-  padding: 0;
-  margin: 0; }
-
+/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+html {
+	line-height: 1.15;
+	-webkit-text-size-adjust: 100%;
+}
 body {
-  background: #aaabb8;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-
+	margin: 0;
+}
+h1 {
+	font-size: 2em;
+	margin: 0.67em 0;
+}
+hr {
+	box-sizing: content-box;
+	height: 0;
+	overflow: visible;
+}
+pre {
+	font-family: monospace, monospace;
+	font-size: 1em;
+}
+a {
+	background-color: transparent;
+}
+abbr[title] {
+	border-bottom: none;
+	text-decoration: underline;
+	text-decoration: underline dotted;
+}
+b,
+strong {
+	font-weight: bolder;
+}
+code,
+kbd,
+samp {
+	font-family: monospace, monospace;
+	font-size: 1em;
+}
+small {
+	font-size: 80%;
+}
+sub,
+sup {
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
+}
+sub {
+	bottom: -0.25em;
+}
+sup {
+	top: -0.5em;
+}
+img {
+	border-style: none;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+	font-family: inherit;
+	font-size: 100%;
+	line-height: 1.15;
+	margin: 0;
+}
+button,
+input {
+	overflow: visible;
+}
+button,
+select {
+	text-transform: none;
+}
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+	-webkit-appearance: button;
+}
+button::-moz-focus-inner,
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
+	border-style: none;
+	padding: 0;
+}
+button:-moz-focusring,
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
+	outline: 1px dotted ButtonText;
+}
+fieldset {
+	padding: 0.35em 0.75em 0.625em;
+}
+legend {
+	box-sizing: border-box;
+	color: inherit;
+	display: table;
+	max-width: 100%;
+	padding: 0;
+	white-space: normal;
+}
+progress {
+	vertical-align: baseline;
+}
+textarea {
+	overflow: auto;
+}
+[type='checkbox'],
+[type='radio'] {
+	box-sizing: border-box;
+	padding: 0;
+}
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
+	height: auto;
+}
+[type='search'] {
+	-webkit-appearance: textfield;
+	outline-offset: -2px;
+}
+[type='search']::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+::-webkit-file-upload-button {
+	-webkit-appearance: button;
+	font: inherit;
+}
+details {
+	display: block;
+}
+summary {
+	display: list-item;
+}
+template {
+	display: none;
+}
+[hidden] {
+	display: none;
+}
+.navbar {
+	overflow: hidden;
+	width: 100%;
+	z-index: 99;
+}
+.navbar .content {
+	margin: 0 auto;
+	width: 70%;
+	height: 48px;
+	background-color: #2e9cca;
+	display: flex;
+	justify-content: space-around;
+}
+.navbar .content a {
+	flex: 1;
+	flex-basis: 0;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+.navbar .content a:hover {
+	background-color: #464866;
+}
+.navbar .content a.active {
+	background-color: #25274d;
+	color: white;
+}
+.navbar .content a:first-child {
+	flex: 1.6;
+}
+.sticky {
+	position: fixed;
+	top: 0;
+}
+.sticky + #about-anchor {
+	padding-top: 48px;
+} /*! begin website styling */
+* {
+	padding: 0;
+	margin: 0;
+}
+body {
+	background: #aaabb8;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+		'Helvetica Neue', sans-serif;
+}
+body.in-transition {
+	transition: transform 900ms ease;
+}
 .anchor {
-  display: block;
-  height: 48px;
-  margin-top: -48px;
-  visibility: hidden; }
-
+	display: block;
+	height: 48px;
+	margin-top: -48px;
+	visibility: hidden;
+}
 #home {
-  height: 100vh;
-  background: #25274d; }
-  #home .home-text-box {
-    padding-top: 34vh;
-    font-size: 1.5em;
-    text-align: center;
-    color: #fff;
-    text-shadow: 2px 2px 1px #000; }
-    #home .home-text-box span {
-      color: #2e9cca; }
-    #home .home-text-box a {
-      color: #fff;
-      text-decoration: none; }
-    #home .home-text-box button {
-      margin-top: 15px;
-      background-color: transparent;
-      width: 150px;
-      height: 40px;
-      color: #fff;
-      text-decoration: none;
-      border-color: #fff;
-      border-radius: 2px;
-      font-size: 0.8em; }
-      #home .home-text-box button.loaded {
-        -o-transition: 0.5s;
-        -ms-transition: 0.5s;
-        -moz-transition: 0.5s;
-        -webkit-transition: 0.5s;
-        transition: 0.5s; }
-      #home .home-text-box button:hover {
-        background-color: #464866; }
-      #home .home-text-box button:focus {
-        outline: none;
-        border-color: #fff; }
-      #home .home-text-box button:active {
-        outline: none;
-        border-color: #fff; }
-      #home .home-text-box button:visited {
-        color: #fff;
-        text-decoration: none; }
-
+	height: 100vh;
+	background: #25274d;
+}
+#home .home-text-box {
+	padding-top: 34vh;
+	font-size: 1.5em;
+	text-align: center;
+	color: #fff;
+	text-shadow: 2px 2px 1px #000;
+}
+#home .home-text-box span {
+	color: #2e9cca;
+}
+#home .home-text-box h1 {
+	margin-bottom: 16px;
+}
+#home .home-text-box a {
+	color: #fff;
+	text-decoration: none;
+}
+#home .home-text-box button {
+	margin-top: 25px;
+	background-color: transparent;
+	width: 150px;
+	height: 40px;
+	color: #fff;
+	text-decoration: none;
+	border-color: #fff;
+	border-radius: 2px;
+	font-size: 0.8em;
+}
+#home .home-text-box button.loaded {
+	-o-transition: 0.5s;
+	-ms-transition: 0.5s;
+	-moz-transition: 0.5s;
+	-webkit-transition: 0.5s;
+	transition: 0.5s;
+}
+#home .home-text-box button:hover {
+	background-color: #464866;
+}
+#home .home-text-box button:focus {
+	outline: none;
+	border-color: #fff;
+}
+#home .home-text-box button:active {
+	outline: none;
+	border-color: #fff;
+}
+#home .home-text-box button:visited {
+	color: #fff;
+	text-decoration: none;
+}
 #about {
-  width: 70%;
-  margin: 0 auto;
-  background: #e2e2e6; }
-  #about .container {
-    padding: 20px 0px;
-    display: -webkit-flex;
-    display: flex; }
-    #about .container .text {
-      flex-grow: 1;
-      flex-basis: 0; }
-      #about .container .text h2 {
-        font-size: 4em;
-        text-align: center;
-        padding-right: 30px;
-        color: #25274d; }
-      #about .container .text hr {
-        margin-right: 30px;
-        border: 0;
-        height: 2px;
-        background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #25274d, rgba(0, 0, 0, 0)); }
-      #about .container .text h4 {
-        margin: 6px 0;
-        font-size: 1.2em;
-        text-align: center;
-        color: #25274d;
-        margin-right: 30px; }
-      #about .container .text p {
-        margin-top: 6px;
-        text-indent: 1.5em;
-        font-size: 1.2em;
-        margin-right: 30px;
-        color: #25284e; }
-    #about .container .image {
-      flex-grow: 1.3;
-      flex-basis: 0;
-      padding-top: 30px; }
-      #about .container .image img {
-        max-width: 100%;
-        border: 2px solid #ccc;
-        border-radius: 6px;
-        padding: 6px;
-        transform: rotate(0.5deg);
-        -moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
-        -webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
-        box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3); }
-
+	width: 70%;
+	margin: 0 auto;
+	background: #e2e2e6;
+}
+#about .container {
+	padding: 20px 0px;
+	display: -webkit-flex;
+	display: flex;
+}
+#about .container .text {
+	flex-grow: 1;
+	flex-basis: 0;
+}
+#about .container .text h2 {
+	font-size: 4em;
+	text-align: center;
+	padding-right: 30px;
+	color: #25274d;
+}
+#about .container .text hr {
+	margin-right: 30px;
+	border: 0;
+	height: 2px;
+	background-image: linear-gradient(to right, transparent, #25274d, transparent);
+}
+#about .container .text h4 {
+	margin: 6px 0;
+	font-size: 1.2em;
+	text-align: center;
+	color: #25274d;
+	margin-right: 30px;
+}
+#about .container .text p {
+	margin-top: 6px;
+	text-indent: 1.5em;
+	font-size: 1.2em;
+	margin-right: 30px;
+	color: #25284e;
+}
+#about .container .image {
+	flex-grow: 1.3;
+	flex-basis: 0;
+	padding-top: 30px;
+}
+#about .container .image img {
+	max-width: 100%;
+	border: 2px solid #ccc;
+	border-radius: 6px;
+	padding: 6px;
+	transform: rotate(0.5deg);
+	-moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+	box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+}
 #projects {
-  background-color: #d9dadf;
-  height: 130vh;
-  width: 70%;
-  margin: 0 auto;
-  padding-top: 20px; }
-  #projects h2 {
-    font-size: 4em;
-    text-align: center;
-    color: #25274d; }
-  #projects hr {
-    margin: 15px 20px;
-    border: 0;
-    height: 2px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #25274d, rgba(0, 0, 0, 0)); }
-  #projects .project-grid {
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin: 0 -10px; }
-    #projects .project-grid .project {
-      height: 300px;
-      margin: 10px;
-      flex: 40%;
-      background-color: #e2e2e6;
-      border: 2px solid #c6c6cf;
-      border-radius: 5%; }
-
+	background-color: #d9dadf;
+	height: 130vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+#projects h2 {
+	font-size: 4em;
+	text-align: center;
+	color: #25274d;
+}
+#projects hr {
+	margin: 15px 20px;
+	border: 0;
+	height: 2px;
+	background-image: linear-gradient(to right, transparent, #25274d, transparent);
+}
+#projects .project-grid {
+	display: -webkit-flex;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin: 0 -10px;
+}
+#projects .project-grid .project {
+	height: 300px;
+	margin: 10px;
+	flex: 40%;
+	background-color: #e2e2e6;
+	border: 2px solid #c6c6cf;
+	border-radius: 5%;
+}
+#skills {
+	background-color: #e2e2e6;
+	height: 100vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+#education {
+	background-color: #e2e2e6;
+	height: 100vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+#contact {
+	background-color: #e2e2e6;
+	height: 100vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+#footer {
+	width: 70%;
+	margin: 0 auto;
+	padding: 10px 0;
+	background-color: #25274d;
+	color: #fff;
+	text-align: center;
+}
 .container {
-  margin: 0 8%; }
-
+	margin: 0 8%;
+}
 /*# sourceMappingURL=styles.css.map */
