--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,8 @@
+@import '_normalize';
 @import '_variables';
 @import '_navbar';
+
+/*! begin website styling */
 
 * {
 	padding: 0;
@@ -10,6 +13,9 @@ body {
 	background: $offwhite;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
 		'Helvetica Neue', sans-serif;
+	&.in-transition {
+		transition: transform 900ms ease;
+	}
 }
 
 .anchor {
@@ -31,12 +37,15 @@ body {
 		span {
 			color: $lightblue;
 		}
+		h1 {
+			margin-bottom: 16px;
+		}
 		a {
 			color: #fff;
 			text-decoration: none;
 		}
 		button {
-			margin-top: 15px;
+			margin-top: 25px;
 			background-color: transparent;
 			width: 150px;
 			height: 40px;
@@ -159,6 +168,39 @@ body {
 			border-radius: 5%;
 		}
 	}
+}
+
+#skills {
+	background-color: lighten($offwhite, 20%);
+	height: 100vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
+#education {
+	background-color: lighten($offwhite, 20%);
+	height: 100vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
+#contact {
+	background-color: lighten($offwhite, 20%);
+	height: 100vh;
+	width: 70%;
+	margin: 0 auto;
+	padding-top: 20px;
+}
+
+#footer {
+	width: 70%;
+	margin: 0 auto;
+	padding: 10px 0;
+	background-color: $navyblue;
+	color: #fff;
+	text-align: center;
 }
 
 .container {
