add baseline projects and styling

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,6 +16,10 @@ body {
 	}
 }
 
+a {
+	text-decoration: none;
+}
+
 .anchor {
 	// Adjust anchor points for sticky nav height
 	display: block;
@@ -27,11 +31,12 @@ body {
 .section {
 	width: 70%;
 	margin: 0 auto;
-	background: lighten($offwhite, 20%);
+	background: lighten($offwhite, 22%);
 	padding: 20px 0px;
 }
 
 .container {
+	padding: 0;
 	margin: 0 8%;
 }
 
@@ -81,13 +86,12 @@ body {
 			}
 		}
 	}
-}
-
-#particles {
-	width: 100%;
-	height: 100vh;
-	position: absolute;
-	overflow: hidden;
+	#particles {
+		width: 100%;
+		height: 100vh;
+		position: absolute;
+		overflow: hidden;
+	}
 }
 
 #about {
@@ -146,8 +150,9 @@ body {
 
 #projects {
 	background-color: lighten($offwhite, 17%);
-	height: 130vh;
+	height: 100vh;
 	h2 {
+		margin: 10px 0 40px 0;
 		font-size: 4em;
 		text-align: center;
 		color: $navyblue;
@@ -165,12 +170,80 @@ body {
 		flex-wrap: wrap;
 		margin: 0 -10px;
 		.project {
-			height: 300px;
 			margin: 10px;
 			flex: 40%;
-			background-color: lighten($offwhite, 20%);
-			border: 2px solid lighten($offwhite, 10%);
-			border-radius: 5%;
+			text-align: center;
+			background-color: lighten($offwhite, 22%);
+			border-radius: 2%;
+			h3 {
+				color: $navyblue;
+				font-size: 1.5em;
+				margin: 22px;
+			}
+			.img-container {
+				position: relative;
+				width: 90%;
+				margin: auto;
+				overflow: hidden;
+				border-radius: 1%;
+				.img-overlay {
+					background: rgba(0, 0, 0, 0.7);
+					position: absolute;
+					height: 99%;
+					width: 100%;
+					left: 0;
+					top: 0;
+					bottom: 0;
+					right: 0;
+					opacity: 0;
+					-webkit-transition: all 0.4s ease-in-out 0s;
+					-moz-transition: all 0.4s ease-in-out 0s;
+					transition: all 0.4s ease-in-out 0s;
+				}
+				&:hover .img-overlay {
+					opacity: 1;
+				}
+				&:hover .img-info {
+					top: 50%;
+					left: 50%;
+					opacity: 1;
+				}
+				img {
+					width: 100%;
+				}
+				.img-info {
+					position: absolute;
+					text-align: center;
+					padding-left: 1em;
+					padding-right: 1em;
+					width: 100%;
+					top: 80%;
+					left: 50%;
+					opacity: 0;
+					color: #fff;
+					-webkit-transform: translate(-50%, -50%);
+					-moz-transform: translate(-50%, -50%);
+					transform: translate(-50%, -50%);
+					-webkit-transition: all 0.3s ease-in-out 0s;
+					-moz-transition: all 0.3s ease-in-out 0s;
+					transition: all 0.3s ease-in-out 0s;
+					h3 {
+						margin-top: 0;
+						color: #fff;
+					}
+					p {
+						margin: 0 14%;
+					}
+				}
+			}
+			span {
+				background-color: lighten($offwhite, 12%);
+				padding: 3px 5px;
+				margin: 11px 3px 14px 3px;
+				border-radius: 3px;
+				display: inline-block;
+				font-size: 0.9em;
+			}
 		}
 	}
 }
