--- a/css/styles.scss
+++ b/css/styles.scss
@@ -119,7 +119,7 @@ a {
 				margin: 6px 0;
 				font-size: 1.2em;
 				text-align: center;
-				color: lighten($navyblue, 0.1);
+				color: lighten($navyblue, 0.2);
 				margin-right: 30px;
 			}
 			p {
@@ -127,7 +127,7 @@ a {
 				text-indent: 1.5em;
 				font-size: 1.2em;
 				margin-right: 30px;
-				color: lighten($navyblue, 0.3);
+				color: lighten($navyblue, 0.4);
 			}
 		}
 		.image {
@@ -175,7 +175,7 @@ a {
 			background-color: lighten($offwhite, 22%);
 			border-radius: 2%;
 			h3 {
-				color: $navyblue;
+				color: lighten($navyblue, 0.2);
 				font-size: 1.5em;
 				margin: 22px;
 			}
@@ -347,6 +347,7 @@ a {
 				margin: 10px 0 0 0;
 			}
 			p {
+				color: lighten($navyblue, 0.3);
 				margin: 6px 0 18px 0;
 				text-align: center;
 				font-size: 1.2em;
@@ -365,7 +366,7 @@ a {
 		color: $navyblue;
 	}
 	hr {
-		margin: 15px 20px;
+		margin: 15px 20px 25px 20px;
 		border: 0;
 		height: 2px;
 		background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $navyblue, rgba(0, 0, 0, 0));
@@ -375,12 +376,26 @@ a {
 		padding: 20px 5%;
 		margin: 10px 0 20px 0;
 		background-color: lighten($offwhite, 30%);
+		h4 {
+			font-size: 1.2em;
+			color: lighten($navyblue, 10%);
+		}
 		.school-name {
 			display: inline;
 		}
 		.school-dates {
 			float: right;
 			margin: 0;
+		}
+		h6 {
+			color: lighten($navyblue, 15%);
+			font-style: italic;
+			font-size: 0.9em;
+			margin: 10px 0 0 0;
+		}
+		li {
+			color: lighten($navyblue, 25%);
+			line-height: 1.4em;
 		}
 	}
 }
@@ -445,7 +460,7 @@ a {
 		h3 {
 			color: lighten($offwhite, 26%);
 			text-align: center;
-			font-size: 1.5em;
+			font-size: 1.4em;
 			margin-left: 10%;
 			margin-right: 10%;
 		}
@@ -479,7 +494,7 @@ a {
 				background-color: lighten($offwhite, 32%);
 			}
 			textarea {
-				height: 200px;
+				height: 180px;
 				resize: none;
 				padding-top: 10px;
 			}
@@ -523,4 +538,35 @@ a {
 	background-color: $navyblue;
 	color: #fff;
 	text-align: center;
+	.social-icons {
+		display: flex;
+		justify-content: center;
+		margin: 12px 0 2px 0;
+		font-size: 12px;
+		.social {
+			border: 1px solid lighten($navyblue, 30%);
+			border-radius: 5%;
+			margin: 0 5px;
+			width: 60px;
+			padding: 6px 0 4px 0;
+			.icon {
+				img {
+					width: 30px;
+					height: 30px;
+				}
+			}
+			p {
+				margin: 2px 0;
+				color: white;
+			}
+			&:hover {
+				background-color: lighten($navyblue, 30%);
+				-o-transition: 0.5s;
+				-ms-transition: 0.5s;
+				-moz-transition: 0.5s;
+				-webkit-transition: 0.5s;
+				transition: 0.5s;
+			}
+		}
+	}
 }
