--- a/css/styles.scss
+++ b/css/styles.scss
@@ -101,52 +101,45 @@ a {
 #about {
 	padding: 0;
 	.container {
-		padding: 20px 0px;
-		display: -webkit-flex;
-		display: flex;
-		.text {
-			flex-grow: 1;
-			flex-basis: 0;
-			h2 {
-				font-size: 4em;
-				text-align: center;
-				padding-right: 30px;
-				color: $navyblue;
-			}
-			hr {
-				margin-right: 30px;
-				border: 0;
-				height: 2px;
-				background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $navyblue, rgba(0, 0, 0, 0));
-			}
-			h4 {
-				margin: 6px 0;
-				font-size: 1.2em;
-				text-align: center;
-				color: lighten($navyblue, 0.2);
-				margin-right: 30px;
-			}
-			p {
-				margin-top: 6px;
-				text-indent: 1.5em;
-				font-size: 1.2em;
-				margin-right: 30px;
-				color: lighten($navyblue, 0.4);
-			}
+		padding: 20px 0px 40px 0px;
+		h2 {
+			font-size: 4em;
+			margin: 10px 0 40px 0;
+			text-align: center;
+			color: $navyblue;
 		}
-		.image {
-			flex-grow: 1.3;
-			flex-basis: 0;
-			padding-top: 30px;
-			img {
-				max-width: 100%;
-				border: 2px solid #ccc;
-				border-radius: 6px;
-				padding: 6px;
-				transform: rotate(0.5deg);
-				-moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
-				-webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
-				box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+		hr {
+			border: 0;
+			height: 2px;
+			background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $navyblue, rgba(0, 0, 0, 0));
+		}
+		h4 {
+			margin: 6px 0;
+			font-size: 1.2em;
+			text-align: center;
+			color: lighten($navyblue, 0.2);
+			margin-right: 30px;
+		}
+		p {
+			margin-top: 6px;
+			text-indent: 1.5em;
+			font-size: 1.2em;
+			margin-right: 30px;
+			color: lighten($navyblue, 0.4);
+		}
+		img {
+			float: right;
+			width: 60%;
+			border: 2px solid #ccc;
+			border-radius: 6px;
+			padding: 6px;
+			margin: 10px 0 20px 10px;
+			transform: rotate(0.5deg);
+			-moz-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+			-webkit-box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+			box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
+			@media (max-width: 935px) {
+				width: 100%;
 			}
 		}
 	}
