set max width and fix minor typos/alignment

--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -2,6 +2,7 @@
 	height: 50px;
 	width: 70%;
 	min-width: 320px;
+	max-width: 1350px;
 	background-color: $lightblue;
 	position: relative;
 	margin: 0 auto;
