--- a/css/styles.scss
+++ b/css/styles.scss
@@ -53,6 +53,7 @@ a {
 .section {
 	width: 70%;
 	min-width: 320px;
+	max-width: 1350px;
 	@media (max-width: 768px) {
 		width: 100%;
 	}
@@ -146,13 +147,13 @@ a {
 			font-size: 1.2em;
 			text-align: center;
 			color: lighten($navyblue, 0.2);
-			margin-right: 30px;
 		}
 		p {
-			margin-top: 6px;
+			// margin-top: 6px;
+			margin: 6px 12px 0 12px;
 			text-indent: 1.5em;
 			font-size: 1.2em;
-			margin-right: 30px;
+			// margin-right: 30px;
 			color: lighten($navyblue, 0.4);
 		}
 		img {
@@ -401,7 +402,7 @@ a {
 		}
 		.skills-col2 {
 			width: 35%;
-			padding: 0 0 0 20px;
+			padding: 5% 0 0 20px;
 			@media (max-width: 640px) {
 				width: 100%;
 				padding: 20px;
@@ -528,6 +529,7 @@ a {
 	overflow: hidden;
 	width: 70%;
 	min-width: 320px;
+	max-width: 1350px;
 	@media (max-width: 768px) {
 		width: 100%;
 	}
@@ -570,6 +572,7 @@ a {
 	overflow: hidden;
 	width: 70%;
 	min-width: 320px;
+	max-width: 1350px;
 	@media (max-width: 768px) {
 		width: 100%;
 	}
@@ -579,7 +582,6 @@ a {
 	z-index: 3;
 	//content formatting
 	background: lighten($navyblue, 30%);
-	min-height: 80vh;
 	iframe {
 		display: none;
 		z-index: -1;
@@ -587,7 +589,7 @@ a {
 	.container {
 		margin: 0 20%;
 		h2 {
-			margin: 5% 0 15px 0;
+			margin: 50px 0 15px 0;
 			font-size: 3.5em;
 			text-align: center;
 			color: lighten($offwhite, 26%);
@@ -641,7 +643,6 @@ a {
 				width: 60%;
 				margin: 0 auto 20px auto;
 				padding: 4px;
-				// border: 2px solid lighten($offwhite, 26%);
 				border-radius: 4px;
 				#success-close {
 					border: 1px solid lighten($offwhite, 26%);
@@ -694,6 +695,7 @@ a {
 #footer {
 	width: 70%;
 	min-width: 320px;
+	max-width: 1350px;
 	@media (max-width: 768px) {
 		width: 100%;
 	}
